Created body inside index

--- a/practical-challenge-1/index.html
+++ b/practical-challenge-1/index.html
@@ -18,7 +18,8 @@
 
 <body>
     <h1>The Design of the 1960s</h1>
-    <p>The nineteen-sixties were a vibrant time in the world of design in which increasing internationalism and experimentation flourished. This website pays tribute to some of the great designers and landmark design moments of that pivotal and unforgettable decade.</p>
+    <p>The <STRONG>nineteen-sixties</STRONG> were a vibrant time in the world of design in which increasing internationalism and experimentation flourished. This website pays tribute to some of the great designers and landmark design moments of that pivotal and unforgettable decade.</p>
+
 </body>
 
 </html>
